--- a/styles.css
+++ b/styles.css
@@ -2,17 +2,22 @@
     font-family: "Verdana", "Geneva", "Tahoma", sans-serif;
 }
 
+pre, pre * {
+    font-family: monospace;
+}
+
 h1, h2 {
     text-align: center;
-    font-family: "Coral Pixels", serif;
+    font-family: "Coral Pixels", serif; /* delicious crusty font */
     font-weight: 400;
     font-style: normal;
 }
 
+
+/* give h2 a horizontal bar */
 h2 {
     overflow: hidden;
-}
-  
+} 
 h2::before,
 h2::after {
     background-color: black;
@@ -22,13 +27,11 @@ h2::after {
     position: relative;
     vertical-align: middle;
     width: 50%;
-}
-  
+} 
 h2::before {
     right: 0.5em;
     margin-left: -50%;
 }
-  
 h2::after {
     left: 0.5em;
     margin-right: -50%;
